Revert "FISH-6432 Applications Take Longer To Deploy on JDK 17"
This reverts commit 9e5b5f576f7c4202a30708a68b79c4a9b2d2ef0f.